--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -15,7 +15,7 @@
             <img class="signup-logo" th:src="@{/assets/media/icons/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
             <div class="signup-login-face">
                 <span class="signup-login-note" th:text="#{login.label.loginNote}"></span>
-                <a class="z-button signup-return" href="/login" id="sendLogin" th:text="#{login.btn.login}"></a>
+                <a class="z-button light-secondary signup-return" href="/login" id="sendLogin" th:text="#{login.btn.login}"></a>
             </div>
             <img class="signup-main-image" th:src="@{/assets/media/images/signup/img_signup_main.png}" width="1310" height="800" alt="Signup Main">
         </div>
