--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="thumbnail-bottom">
                         <label>${i18n.userDateTime(image.updateDt)}</label>
-                        <button type="button" class="float-right" data-name="${image.name}" onclick="removeImage(this);"><span class="icon icon-delete"></span></button>
+                        <button type="button" class="z-button-icon extra float-right" data-name="${image.name}" onclick="removeImage(this);"><span class="z-icon i-delete"></span></button>
                     </div>
                 </div>
             `;
