--- a/src/main/resources/public/scss/process/_buttons.scss
+++ b/src/main/resources/public/scss/process/_buttons.scss
@@ -1,47 +1,32 @@
 @import "../template/buttons";
 
 // header button
-.btn-header {
-  width: 3.75rem; // 60px
-  height: 3.125rem; // 50px
-  padding: 0;
-  border-radius: 0;
-
-  // 첫번째 버튼만 구분자를 가리기 위해 구분자 너비만큼 margin을 -1px 로 조정한다.
-  &:first-of-type {
-    margin-left: -0.063rem; // -1px
-  }
-
-  // mouse over and pressed
-  &:focus,
-  &:hover,
-  &:active {
-    background-color: #26A7FF; 
-  }
-
-  .icon-save {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/topmenu/icon_save.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white); // 20px 20px 
-  }
-  .icon-save-as {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/topmenu/icon_save_as.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white);// 20px 20px 
-  }
-  .icon-undo {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/topmenu/icon_undo.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white);// 20px 20px 
-  }
-  .icon-redo {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/topmenu/icon_redo.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white);// 20px 20px 
-  }
-  .icon-simulation {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/topmenu/icon_simulation.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white);// 20px 20px 
-  }
-  .icon-image-download {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/topmenu/icon_image_download.svg', 1.5rem, 1.25rem, no-repeat, center, null, $white);// 24px 20px 
+.#{$common-prefix}header-button {
+  padding: 0.5625rem 0.625rem; // 9px 10px
+  &.#{$common-prefix}button-icon {
+    .#{$common-prefix}icon {
+      &.i-save {
+        @include maskImage('#{$icon-folder-path}process/topmenu/icon_save.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
+      }
+      &.i-save-as {
+        @include maskImage('#{$icon-folder-path}process/topmenu/icon_save_as.svg', 1.5rem, 1.5rem, no-repeat, center);// 24px 24px
+      }
+      &.i-undo {
+        @include maskImage('#{$icon-folder-path}process/topmenu/icon_undo.svg', 1.5rem, 1.5rem, no-repeat, center);// 24px 24px
+      }
+      &.i-redo {
+        @include maskImage('#{$icon-folder-path}process/topmenu/icon_redo.svg', 1.5rem, 1.5rem, no-repeat, center);// 24px 24px
+      }
+      &.i-simulation {
+        @include maskImage('#{$icon-folder-path}process/topmenu/icon_simulation.svg', 1.5rem, 1.5rem, no-repeat, center);// 24px 24px
+      }
+      &.i-image-download {
+        @include maskImage('#{$icon-folder-path}process/topmenu/icon_image_download.svg', 1.5rem, 1.5rem, no-repeat, center);// 24px 24px
+      }
+      &.i-dropdown {
+        @include maskImage('#{$icon-folder-path}process/topmenu/icon_dropdown.svg', 1.5rem, 1.5rem, no-repeat, center);// 24px 24px
+      }
+    }
   }
 }
 
@@ -126,84 +111,24 @@
   }
 }
 
-// minimap button
-.btn-minimap {
-  position: absolute;
-  width: 2.5rem; // 40px
-  height: 2.5rem; // 40px
-  bottom: 0.625rem; // 10px
-  right: 0.625rem; // 10px
-  padding: 0;
-  // pressed
-  &.active {
-    border-color: $blue;
-    .icon-minimap { background: $blue; }
+.#{$common-prefix}button-icon {
+  &.#{$common-prefix}button-minimap {
+    @include absolute($right: 0.625rem, $bottom: 0.625rem); // 10px 10px
+    .#{$common-prefix}icon {
+      &.i-minimap {
+        @include maskImage('#{$icon-folder-path}process/editor/icon_map.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
+      }
+    }
   }
-
-  .icon-minimap {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/editor/icon_map.svg', 1.063rem, 1.25rem, no-repeat, center, null, map-get($grays, "pressed")); // 17px 20px
+  &.#{$common-prefix}button-simulation-report {
+    @include absolute($right: 0.625rem, $bottom: 3.438rem); // 10px 55px
+    .#{$common-prefix}icon {
+      &.i-simulation-report {
+        @include maskImage('#{$icon-folder-path}process/editor/icon_simulation_report.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
+      }
+    }
   }
-}
-
-// simulation report button
-.btn-simulation-report {
-  position: absolute;
-  width: 2.5rem; // 40px
-  height: 2.5rem; // 40px
-  bottom: 3.438rem; // 55px
-  right: 0.625rem; // 10px
-  padding: 0;
-  // pressed
-  &.active {
-    border-color: $blue;
-    .icon-simulation-report { background: $blue; }
-  }
-
-  .icon-simulation-report {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/editor/icon_simulation_report.svg', 1.25rem, 1rem, no-repeat, center, null, map-get($grays, "pressed")); // 20px 16px
-    vertical-align: baseline; // TODO: 아이콘 위치가 다른 아이콘과 조금 다름
-  }
-}
-
-// clipboard tooltip button
-.btn-clipboard-tooltip {
-  width: 2.5rem; // 40px
-  height: 2.5rem; // 40px
-  padding: 0;
-
-  .icon-clipboard {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/editor/icon_clipboard.svg', 1.25rem, 1.25rem, no-repeat, center, null, map-get($grays, "pressed")); // 20px 20px
-  }
-}
-
-// candidate add button
-.btn-candidate-add {
-  width: 2.5rem; // 40px
-  height: 2.5rem; // 40px
-  padding: 0;
-  margin-left: 0.3125rem; // 5px
-}
-
-// 파일 추가 버튼
-.btn-file {
-  width: 2.5rem; // 40px
-  height: 2.5rem; // 40px
-  padding: 0;
-
-  .icon-search {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}icon_search.svg', 18px, 18px, no-repeat, center, 18px 18px, $gray);
-  }
-}
-
-// 삭제 버튼
-.btn,
-button {
-  .icon-delete {
-    display: inline-block;
-    @include maskImage('#{$icon-folder-path}form/tooltip/icon_delete.svg', 1.25rem, 1.25rem, no-repeat, center, null, map-get($grays, "pressed")); // 20px 20px
+  &.#{$common-prefix}button-candidate-add {
+    margin-left: 0.3125rem; // 5px
   }
 }
