--- a/src/main/resources/public/template/cmdb/class/classEdit.html
+++ b/src/main/resources/public/template/cmdb/class/classEdit.html
@@ -311,9 +311,9 @@
             inputElem.readOnly = true;
 
             const deleteBtn = document.createElement('button');
-            deleteBtn.classList.add('btn-minus');
+            deleteBtn.className = 'z-button-icon extra';
             const deleteIcon = document.createElement('span');
-            deleteIcon.classList.add('icon-delete-gray', 'ml-1');
+            deleteIcon.className = 'z-icon i-delete';
             deleteBtn.appendChild(deleteIcon);
             deleteBtn.addEventListener('click', function () {
                 aliceAlert.confirm(i18n.msg('cmdb.class.msg.confirmDeleteAttribute'), function () {
