--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -399,9 +399,9 @@
             const divDeleteBtn = document.createElement('div');
             divDeleteBtn.classList.add('flex-column', 'col-1');
             const deleteBtn = document.createElement('button');
-            deleteBtn.classList.add('btn-minus');
+            deleteBtn.className = 'z-button-icon extra';
             const deleteIcon = document.createElement('span');
-            deleteIcon.classList.add('icon-delete-gray', 'ml-1');
+            deleteIcon.className = 'z-icon i-delete';
             deleteBtn.appendChild(deleteIcon);
             deleteBtn.addEventListener('click', function () {
                 const row = deleteBtn.parentNode.parentNode;
