--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -229,9 +229,9 @@
             valueInput.value = (typeof param !== 'undefined') ? param.value : '';
 
             const deleteBtn = document.createElement('button');
-            deleteBtn.classList.add('btn-minus');
+            deleteBtn.className = 'z-button-icon extra';
             const deleteIcon = document.createElement('span');
-            deleteIcon.classList.add('icon-delete-gray', 'ml-1');
+            deleteIcon.className = 'z-icon i-delete';
             deleteBtn.appendChild(deleteIcon);
             deleteBtn.addEventListener('click', function () {
                 aliceAlert.confirm(i18n.msg('customCode.msg.confirmDeleteCondition'), function () {
