--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -12,7 +12,7 @@
     <div class="portal-container flex-row">
         <div class="login-background">
             <img class="login-logo" th:src="@{/assets/media/icons/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
-            <a href="/portals/main" class="z-button login-return float-right" th:text="#{common.btn.return}"></a>
+            <a href="/portals/main" class="z-button light-secondary main-return float-right" th:text="#{portal.btn.main}"></a>
             <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
         </div>
         <div class="login-form">
