--- a/src/main/resources/public/template/portal/faq/portalFaqList.html
+++ b/src/main/resources/public/template/portal/faq/portalFaqList.html
@@ -7,8 +7,8 @@
 	<details class="faq-group" th:each="faqGroup:${faqs.faqGroupList}" th:id="${faqGroup}">
 		<summary class="faq-group-title">
 			<span th:text="#{|common.code.${faqGroup}|}"></span>
-			<span class="icon-plus"></span>
-			<span class="icon-minus"></span>
+			<span class="z-icon i-plus"></span>
+			<span class="z-icon i-minus"></span>
 		</summary>
 		<details class="faq-row" th:each="faqT:${faqs.faqList}" th:if="${faqT.faqGroup} == ${faqGroup}" th:id="${faqT.faqId}">
 			<summary class="faq-row-title" th:text="${faqT.faqTitle}"></summary>
