--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -35,41 +35,41 @@
             <span class="name" th:text="#{process.label.title}"></span>
             <span class="separator"></span>
             <th:block th:if="${#strings.isEmpty(isView)}">
-                <button type="button" class="btn-header header-tooltip" id="btnSave">
-                    <span class="icon icon-save"></span>
+                <button type="button" class="z-header-button z-button-icon light-extra header-tooltip" id="btnSave">
+                    <span class="z-icon i-save"></span>
                     <div class="tooltip-contents">
                         <span th:text="#{common.btn.save}"></span>
                     </div>
                 </button>
             </th:block>
-            <button type="button" class="btn-header header-tooltip" id="btnSaveAs">
-                <span class="icon icon-save-as"></span>
+            <button type="button" class="z-header-button z-button-icon light-extra header-tooltip" id="btnSaveAs">
+                <span class="z-icon i-save-as"></span>
                 <div class="tooltip-contents">
                     <span th:text="#{common.btn.saveAs}"></span>
                 </div>
             </button>
             <th:block th:if="${#strings.isEmpty(isView)}">
-               <button type="button" class="btn-header header-tooltip" id="btnUndo">
-                    <span class="icon icon-undo"></span>
+               <button type="button" class="z-header-button z-button-icon light-extra header-tooltip" id="btnUndo">
+                    <span class="z-icon i-undo"></span>
                     <div class="tooltip-contents">
                         <span th:text="#{process.label.undo}"></span>
                     </div>
                 </button>
-                <button type="button" class="btn-header header-tooltip" id="btnRedo">
-                    <span class="icon icon-redo"></span>
+                <button type="button" class="z-header-button z-button-icon light-extra header-tooltip" id="btnRedo">
+                    <span class="z-icon i-redo"></span>
                     <div class="tooltip-contents">
                         <span th:text="#{process.label.redo}"></span>
                     </div>
                 </button>
             </th:block>
-            <button type="button" class="btn-header header-tooltip" id="btnSimulation">
-                <span class="icon icon-simulation"></span>
+            <button type="button" class="z-header-button z-button-icon light-extra header-tooltip" id="btnSimulation">
+                <span class="z-icon i-simulation"></span>
                 <div class="tooltip-contents">
                     <span th:text="#{process.label.simulation}"></span>
                 </div>
             </button>
-            <button type="button" class="btn-header header-tooltip" id="btnDownload">
-                <span class="icon icon-image-download"></span>
+            <button type="button" class="z-header-button z-button-icon light-extra header-tooltip" id="btnDownload">
+                <span class="z-icon i-image-download"></span>
                 <div class="tooltip-contents">
                     <span th:text="#{process.label.imageDownload}"></span>
                 </div>
