--- a/src/main/resources/public/template/workflow/workFlowList.html
+++ b/src/main/resources/public/template/workflow/workFlowList.html
@@ -40,13 +40,13 @@
                 <td style="width: 20%;" class="align-left" th:text="${document.documentDesc}"></td>
                 <td style="width: 10%;" class="align-center" th:text="#{${document.documentStatus}}"></td>
                 <td style="width: 10%;" class="align-center">
-                    <button type="button" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
-                        <span class="icon-edit"></span>
+                    <button type="button" class="z-button-icon form" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
+                        <span class="z-icon i-edit"></span>
                     </button>
                 </td>
                 <td style="width: 10%;" class="align-center">
-                    <button type="button" sec:authorize="hasAuthority('document.admin.delete')" th:onclick="deleteDocument([[${document.documentId}]])">
-                        <span class="icon-delete"></span>
+                    <button type="button" class="z-button-icon form" sec:authorize="hasAuthority('document.admin.delete')" th:onclick="deleteDocument([[${document.documentId}]])">
+                        <span class="z-icon i-delete"></span>
                     </button>
                 </td>
             </tr>
