--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -3930,7 +3930,9 @@ button.ghost-line:disabled .icon {
 }
 .picker-modal-content {
   display: flex;
+  flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
   border-bottom: 0.0625rem solid #EBEBEB;
   padding: 1.25rem 0 0.9375rem 0;
 }
@@ -3986,6 +3988,9 @@ button.ghost-line:disabled .icon {
   background: #586872;
 }
 .picker-modal-content-date-calendar {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   color: #ACB4BF;
   padding: 0.625rem 1.5rem 0 1.5rem;
 }
