--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4428,7 +4428,9 @@ button .icon-plus {
 }
 .picker-modal-content {
   display: flex;
+  flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
   border-bottom: 0.0625rem solid #EBEBEB;
   padding: 1.25rem 0 0.9375rem 0;
 }
@@ -4484,6 +4486,9 @@ button .icon-plus {
   background: #586872;
 }
 .picker-modal-content-date-calendar {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   color: #ACB4BF;
   padding: 0.625rem 1.5rem 0 1.5rem;
 }
@@ -6958,5 +6963,3 @@ body.modal-active {
 .tags-look .tagify__dropdown__item--active {
   color: #0088E6;
 }
-
-/*# sourceMappingURL=itsm.css.map */
