--- a/src/main/resources/public/scss/template/_date-picker.scss
+++ b/src/main/resources/public/scss/template/_date-picker.scss
@@ -61,7 +61,9 @@
 
   &-content {
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     @include border($datepicker-border-width, solid, $datepicker-border-color, bottom);
     padding: 1.25rem 0 0.9375rem 0; // 20px 0 15px 0
     
@@ -106,6 +108,9 @@
       }
       // calendar
       &-calendar {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         color: $datepicker-cell-font-color; // 전월, 이월
         padding: 0.625rem 1.5rem 0 1.5rem; // 10px 24px 0 24px
 
